[package]
authors = ["mauro <lestofante88@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "robottonzo"
version = "0.1.0"

[dependencies]
cortex-m = "*"
cortex-m-rt = "*"
cortex-m-semihosting = "*"
stm32f3xx-hal = { version = "*", features = ["ld", "rt", "stm32f303xc"] }
panic-halt = "*"
lsm303dlhc = "*"
l3gd20 = "*"
ahrs = { version = "*",  default-features = false }

[dependencies.nalgebra]
version = "0.30"
default-features = false

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "robottonzo"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
