[package]
authors = ["lesto <lestofante88@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "robottonzo"
version = "0.1.0"

[dependencies]
defmt = "0.3.0"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
cortex-m-semihosting = "*"

# Change this import as required for your MCU.
stm32-hal2 = { version = "1.5.4", features = ["f303", "f3rt"]}

[[bin]]
name = "robottonzo-blocking"
test = false
bench = false
path = "src/main_blocking.rs"

[[bin]]
name = "robottonzo-interrupt"
test = false
bench = false
path = "src/main_interrupt.rs"

[[bin]]
name = "robottonzo-dma"
test = false
bench = false
path = "src/main_dma.rs"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
